syntax = "proto3";

package order;

service OrderService {
  rpc BuyProducts (OrderInfo) returns (OrderResponse);
  rpc GetOrderById (OrderId) returns (OrderResponse);
  rpc GetOrders (EmptyResponse) returns (OrderList);
}

message OrderInfo {
  string name = 1;
  string description = 2;
  int32 price = 3;
  int32 quantity = 4;
  string userId = 5;
}

message OrderList {
  repeated OrderResponse orders = 1;
}

message UpdateOrderById {
  string name = 1;
  string description = 2;
  int32 price = 3;
  int32 quantity = 4;
  string id = 5;
}

message OrderId {
  string id = 1;
}

message OrderResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 price = 4;
  int32 quantity = 5;
  string updatedAt = 6;
  string createdAt = 7;
  string userId = 8;
}

message EmptyResponse {}